# BSR-IFC

./: .gitignore  CONSTITUTION.md  README.md  bsr  pyproject.toml  soul.md
cli/: main.py
core/: __init__.py  protocol_handler.py
core/constraint/: engine.py  geometric.py  topological.py
core/history/: change.py
core/operation/: executor.py
docs/: architecture.md  protocol.md
docs/studies/aider/: diff-and-history.md
docs/studies/langchain/: what-to-learn.md
examples/: ifc-baseline.json
planner/: router.py
scripts/: baseline-ifc.py
spec/: 01-ifc-operation-spec.md  02-constraint-spec.md  03-history-spec.md  04-agent-protocol-spec.md
task-library/: Task001.md  Task002.md  Task003.md  Task004.md  Task005.md  Task006.md  Task007.md  Task008.md  Task009.md  Task010.md  Task011.md  Task012.md  Task013.md  Task014.md  Task015.md  Task016.md  Task017.md  Task018.md  Task019.md  Task020.md  Task021.md  Task022.md  Task023.md  Task024.md
tasks/fire/: fix_guid.py
tasks/naming/: rename_room.py  rename_storey.py
tasks/property/: check_attributes.py  standardize.py
tasks/quantity/: check_duplicates.py  classify_elements.py
tasks/report/: element_stats.py  generate_change_report.py  room_area_summary.py
